--- a/css/style-login.css
+++ b/css/style-login.css
@@ -1,3 +1,7 @@
+:root{
+    --color-text:rgb(136, 135, 135);
+    --color-text2:#fff
+}
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +20,7 @@
 }
 
 .container-container h1 {
-    color: #fff;
+    color: var(--color-text2);
     font-size: 35px;
 }
 
@@ -30,7 +34,7 @@
     padding-top: 25px;
     padding-left: 55px;
     background: rgba(0, 0, 0, 0.8);
-    color: #fff;
+    color:var(--color-text2);
     transform: translateY(-60px);
 }
 
@@ -45,14 +49,18 @@ form input {
     border-style: none;
     font-size: 1.07em;
     padding-left: 10px;
+    color:var(--color-text2);
+}
+input:focus{
+    outline: none;
 }
 
 input::placeholder {
-    color: rgb(136, 135, 135);
+    color:var(--color-text)
 }
 
 #submit {
-    color: #fff;
+    color:var(--color-text2);
     background-color: rgb(247, 3, 3);
     margin-bottom: 10px;
     cursor: pointer;
@@ -60,7 +68,7 @@ input::placeholder {
 
 #checkbox {
     width: 15px;
-    color: #fff;
+    color:var(--color-text2);
     transform: translate(-320px, 65px);
 }
 
@@ -69,7 +77,7 @@ input::placeholder {
 }
 
 .span-form a {
-    color: rgb(136, 135, 135);
+    color: var(--color-text);
     text-decoration: none;
 }
 
@@ -79,24 +87,23 @@ input::placeholder {
 
 .text {
     margin-left: 25px;
-    color: rgb(136, 135, 135);
+    color: var(--color-text);
 }
 
 .item1-container,
 .item2-container {
     transform: translateY(55px);
     margin: 5px;
-    color: rgb(136, 135, 135);
+    color: var(--color-text);
     font-size: 16px;
 }
-
-.item1-container a:link {
-    color: #fff;
+.item1-container a{
+    color:var(--color-text2);
     text-decoration: none;
+    font-size:20px;
 }
-
-.item2-container a:link {
-    color: blue;
+.item2-container a{
+    color:blue;
     text-decoration: none;
 }
 
@@ -111,21 +118,105 @@ input::placeholder {
 
 /* Footer*/
 .footer-container {
-    width: 100%;
+    width: auto;
     height:300px;
     padding-bottom:100px;
     background: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    color: var(--color-text2);
     text-align: center;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
+    flex-wrap: wrap;
+    /* align-items: center; */
 }
 .footer-container span{
-    padding-top: 10px;
+    margin-top: 50px;
+    margin-left: 100px;
+}
+.list-footer1,.list-footer2{
+    margin-left: 100px;
+    margin-top: 65px;
+}
+.footer-container ul li{
+    list-style: none;
+    margin-top: 20px;
+    margin-right: 50px;
+}
+#idioma{
+    margin-top: 200px;
+    margin-left: 400px;
 }
 
-.footer-container ul{
-    list-style: none;
+
+/* Media queries */
+
+@media (max-width:420px){
+
+    .container img{
+        width:100px;
+        margin: 15px 0 0 15px;
+    }
+    .container{
+        background-image:linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url("https://assets.nflxext.com/ffe/siteui/vlv3/8ee18735-ada3-45be-b383-a94701054bb9/5a5cc831-01b7-447a-bc4f-aeb9663a88f6/ES-es-20220613-popsignuptwoweeks-perspective_alpha_website_large.jpg") ;
+        background-repeat: no-repeat;
+        width: auto;
+        height: auto;
+        position: absolute;
+    }
+
+    .container-container{
+        display: flex;
+        width: 380px;
+        margin: 5px auto;
+       padding-left: 35px;
+    }
+    
+    form input{
+        width: 310px;
+        font-size: 1.1em;
+    }
+    #checkbox{
+        transform: translate(-310px, 63px);
+    }
+    
+    .text{
+        margin-left: 25px;
+    }
+    .span-form a{
+        font-size: 15px;
+    }
+    
+    .item1-container,
+    .item2-container{
+        font-size: 0.9em;
+        transform: translateY(25px);
+    }
+
+    /* footer */
+    .footer-container{
+    }
+
+    .item3{
+        color: var(--color-text);
+        font-size: 1em;
+
+    }
+
+
+    .list-footer1 li{
+        color: var(--color-text);
+        text-align: left;
+    }
+    .list-footer2 li{
+        color: var(--color-text);
+        text-align: left;
+    }
+
+    #idioma{
+       background-color: var(--color-text);
+       /* width: 110px; */
+       /* height: 50px; */
+       /* padding-left: 30px; */
+       border-radius: 5px;
+       margin: 50px 250px 0 0;
+    }
 }
