--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,200 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-.container{
-    background-image:linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url("https://assets.nflxext.com/ffe/siteui/vlv3/3e521d6d-a53b-4c3f-a85f-dd77c06f7ac7/2ee5f18a-18d6-48ee-ae6e-2db26101afbf/ES-es-20220425-popsignuptwoweeks-perspective_alpha_website_large.jpg") ;
-    background-size: cover;
-    background-position: center;
-    height: 850px;
+body {
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url("https://assets.nflxext.com/ffe/siteui/vlv3/3e521d6d-a53b-4c3f-a85f-dd77c06f7ac7/2ee5f18a-18d6-48ee-ae6e-2db26101afbf/ES-es-20220425-popsignuptwoweeks-perspective_alpha_website_large.jpg");
 }
 
 /* Cabecera de la pagina */
 
-.netflix-head-head{
-    display: flex;
-}
-.netflix-head-head h1{
-    margin: 30px 0 0 30px;
-    font-size: 60px;
+.netflix h1 {
+    margin: 20px 0 0 20px;
+    font-size: 4rem;
     color: red;
-    transform: ;
-    
 }
-option{
+
+option {
     background-color: gray;
 }
-.netflix-head-head select{
+.netflix-head{
+    margin:-40px 0 150px 1240px ;
+
+}
+
+.netflix-head .idioma {
     text-align: center;
-    font-size: 15px;
-    height:40px;
+    font-size: 20px;
+    height: 40px;
     width: 100px;
     color: white;
-    background-color:transparent;
-    margin-top: 40px;
-    margin-left: 1000px;
+    background-color: transparent;
 }
-.netflix-head-head button{
+
+.netflix-head .login {
     border: none;
-    font-size: 15px;
+    font-size: 20px;
     border-radius: 6px;
     height: 40px;
     width: 130px;
-    margin: 40px 0 0 40px;
     background-color: red;
-
 }
 
-.netflix-head-head a{
+.login a {
     color: white;
     text-decoration: none;
 }
+
 /* Cuerpo de la cabecera */
 
-.netflix-head-main{
+.netflix-main {
     color: white;
-    margin: 99px 0px;
-    padding: 100px 468px 143px;
+    margin: 99px 450px;
+    text-align: center;
 }
-.netflix-head-main p:first-child{
+
+.netflix-main p:nth-child(1) {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 60px;
-    text-align: center;
 }
-.netflix-head-main p:nth-last-child(odd){
+
+.netflix-main p:nth-child(2) {
     margin-left: 25px;
     font-size: 30px;
-    text-align: center;
 }
-.netflix-head-main p{
-    width: 100%;
-    font-size: 18px;
-    text-align: center;
+
+.netflix-main p:nth-child(3) {
+    width: 800px;
+    font-size: 24px;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
-.netflix-head-main button{
-    position: absolute;
-    width: 120px;
+
+#enviar {
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    width: 100px;
+    border-style: none;
     height: 60px;
     border-left: none;
     background-color: red;
 
 }
-.netflix-head-main input{
+
+.netflix-main input {
     border-right: none;
 }
 
-.netflix-head-main input:focus{
-outline:none;
+.netflix-main input:focus {
+    outline: none;
 }
-#enviar{
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    width: 30px;
-    border-style:none;
-}
-#email{
+
+#email {
     font-size: 17px;
     color: gray;
     padding: 0 0 0px 15px;
-    width: 580px;
+    width: 540px;
     height: 60px;
+
+}
+
+/* media queries */
+@media (max-width: 420px) {
+    .netflix h1 {
+        margin: 20px 0 0 20px;
+        font-size: 2em;
+        color: red;
+    }
+
+    .netflix-head {
+        margin-left: 130px;
+        margin-top: -30px;
+
+    }
+
+    option {
+        background-color: gray;
+    }
+
+    .netflix-head .idioma {
+        margin-left: 0px;
+        height: 30px;
+        width: 100px;
+        color: white;
+        font-size: 15px;
+    }
+
+    .netflix-head .login {
+        border: none;
+        font-size: 16px;
+        border-radius: 6px;
+        height: 30px;
+        width: 130px;
+        background-color: red;
+
+    }
+
+    .netflix-head a {
+        color: white;
+        text-decoration: none;
+    }
+
+    /* Cuerpo de la cabecera */
+
+    .netflix-main {
+        color: white;
+        margin: 99px 0 0 20px;
+    }
+
+    .netflix-main p:nth-child(1) {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+    }
+
+    .netflix-main p:nth-child(2) {
+        margin-top: 20px;
+        margin-left: 5px;
+        font-size: 20px;
+    }
+
+    .netflix-main p:nth-child(3) {
+        width: 250px;
+        margin-left: 60px;
+        font-size: 20px;
+        margin-bottom: 190px;
+    }
+
+    .form {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #enviar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 120px;
+        height: 40px;
+        border-left: none;
+        background-color: red;
+        text-align: center;
+        font-size: 20px;
+        border-style: none;
+        color: white;
+        text-decoration: none;
+        margin: 20px auto;
+    }
+
+    #email {
+        font-size: 1rem;
+        color: gray;
+        width: 370px;
+        height: 50px;
+
+    }
 
 }
