--- a/css/style-login.css
+++ b/css/style-login.css
@@ -209,15 +209,19 @@ input::placeholder {
 
     /* footer */
     .footer-container {
-    width: auto;
-    height:100%;
-    padding: 0;
-    background: rgba(0, 0, 0, 0.7);
-    color: var(--color-text2);
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    /* align-items: center; */
+        width: auto;
+        height: 100%;
+        padding-bottom: 14px;
+        background: rgba(0, 0, 0, 0.7);
+        color: var(--color-text2);
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .footer-container span {
+        margin-top: 15px;
+        margin-left: 100px;
     }
 
     .item3 {
@@ -237,12 +241,19 @@ input::placeholder {
         text-align: left;
     }
 
+    .list-footer1,
+    .list-footer2 {
+        text-align: left;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+
     #idioma {
         background-color: var(--color-text);
         /* width: 110px; */
         /* height: 50px; */
         /* padding-left: 30px; */
         border-radius: 5px;
-        margin: 50px 250px 0 0;
+        margin: -55px 0 0 198px;
     }
 }
